--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
   "license": "",
   "private": true,
   "dependencies": {
-    "angular": "1.2.x",
-    "swfobject": "2.2"
+      "angular": "1.2.x"
   }
 }
