--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "license": "",
   "private": true,
   "dependencies": {
-      "angular": "1.2.x"
+      "angular": "1.2.x",
+      "ui-router": "0.2.13"
   }
 }
