--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
       "angular": "1.2.x",
-      "ui-router": "0.2.13"
+      "ui-router": "0.2.13",
+      "bootstrap": "~3.3.4"
   }
 }
